[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/sprites/sprite_sheet.png" type="Texture" id=1]
[ext_resource path="res://enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/rock_impact_heavy_slam_02.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 2.0

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Walk_Left"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Walk_Down"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Walk_Right"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Walk_Up"

[sub_resource type="AnimationNodeBlendSpace2D" id=4]
blend_point_0/node = SubResource( 10 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 11 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 12 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 13 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=2]
states/Walk/node = SubResource( 4 )
states/Walk/position = Vector2( 264, 85 )
start_node = "Walk"

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Walk_Down"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1008, 1009, 1010 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Walk_Left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 972, 973, 974 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk_Right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 972, 973, 974 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Walk_Up"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1044, 1045, 1046 ]
}

[node name="Skeleton" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
hframes = 36
vframes = 36
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="HitTimer" type="Timer" parent="."]

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 2 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 3 )
parameters/Walk/blend_position = Vector2( 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/Walk_Down = SubResource( 7 )
anims/Walk_Left = SubResource( 9 )
anims/Walk_Right = SubResource( 6 )
anims/Walk_Up = SubResource( 8 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
